--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "17.0.1",
     "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.27.13",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
@@ -53,7 +54,6 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.1"
   }
 }
