--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
+    "react-collapsible": "^2.8.1",
     "react-dom": "17.0.1",
+    "react-icons-kit": "^1.3.1",
     "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.27.13",
