--- a/package.json
+++ b/package.json
@@ -46,8 +46,13 @@
     "react-dom": "17.0.1",
     "react-icons-kit": "^1.3.1",
     "react-loadingg": "^1.7.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.27.13",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
