--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
+    "twin.macro": "^2.2.3",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
